fixing stretch

--- a/style.scss
+++ b/style.scss
@@ -296,7 +296,7 @@ footer {
 
 .pub-image {
     width: 165px;
-    height: 150px;
+    height: auto;
     max-height: auto;
     max-width: 165px;
     background: none;
